# Baku

./: .gitignore  LICENSE  pyproject.toml
docs/: ARCHITECTURE.md  CONCEPTS_COVERED.md  IMPLEMENTATION.md  TESTING.md
src/baku/: config.py  seeding.py
src/baku/adapters/: __init__.py  base.py  gemma.py  gpt2.py  registry.py
src/baku/probes/: base.py  tl_backend.py
src/baku/targets/: tl_target.py
tests/fixtures/: mock_target.py
tests/slow/: test_backend_fidelity.py  test_sae_fidelity.py
tests/smoke/: test_probe_capture.py
tests/unit/: test_model_adapter.py
