[project]
name = "baku"
version = "2026.07.09"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformer-lens>=2",
    "sae-lens",
    "transformers", "accelerate", "datasets",
    "pydantic>=2", "pyyaml",
    "numpy", "scipy",
    "nltk",
]

[dependency-groups]
dev = ["pytest", "pytest-xdist", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baku"]

[tool.pytest.ini_options]
markers = [
    "smoke: fast plumbing tests on GPT-2",
    "slow: real-model GPU tests, excluded from default CI",
    "gpu: requires a GPU",
]
testpaths = ["tests"]
